--- a/LeaveManagement.web/Views/Shared/_Layout.cshtml
+++ b/LeaveManagement.web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using LeaveManagement.web.Constant;
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -31,17 +32,21 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="">My leave</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Leave Management
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" asp-controller="LeaveTypes" asp-action="Index">Leave Type</a></li>
-                                <li><a class="dropdown-item" href="#">Leave Allocation</a></li>
-                                <li><a class="dropdown-item" href="#">Leave Request</a></li>
-                                <li><a class="dropdown-item" href="#">Employee Management</a></li>
-                            </ul>
-                        </li>
+                        @if (User.IsInRole(Roles.Administrator))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Leave Management
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" asp-controller="LeaveTypes" asp-action="Index">Leave Type</a></li>
+                                    <li><a class="dropdown-item" href="#">Leave Allocation</a></li>
+                                    <li><a class="dropdown-item" href="#">Leave Request</a></li>
+                                    <li><a class="dropdown-item" href="#">Employee Management</a></li>
+                                </ul>
+                            </li>
+                        }
+
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
